--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(0, 0, 0);
   color: rgb(54, 255, 47);
-  font-family: 'Russo+One', sans-serif;
+  font-family: 'Russo One', sans-serif;
   font-size: 50px;
   /* ПОДКЛЮЧАЕМ ШРИФТ font-size: 50px */
 }
@@ -12,6 +12,7 @@ button {
   color: black;
   padding: 10px 20px;
   font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
   /* ПОДКЛЮЧАЕМ ШРИФТ */
 }
 
