--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ button {
   color: black;
   padding: 10px 20px;
   font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Russo One', sans-serif;
   /* ПОДКЛЮЧАЕМ ШРИФТ */
 }
 
